# scalesops_seftware_engineer_interview_project

./: DockerFile  README.md  main.py  pyproject.toml  test.py
scripts/: image_scraper.py
